libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/type-generic-duplicate.jsonc
//@ run: fail
//@ description: Duplicate generic constraints should be rejected
[
  "::kernel::special_form::type",
  "Foo<T: Bar, T>",
  //~^ ERROR Remove this duplicate declaration of 'T'
  { "#struct": { "foo": "Bar" } },
  "_"
]
